<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_backgroundColor"
    android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="@string/tv_text_dialogRegister"
            android:fontFamily="sans-serif-condensed-medium"
            android:textSize="45sp" />

        <EditText
            android:id="@+id/editText_rg_username"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:background="@drawable/outline_style"
            android:hint="@string/tv_hint_dialogRegister_Username"
            android:textSize="25sp"
            android:autofillHints=""
            android:inputType="text" />

        <EditText
            android:id="@+id/editText_rg_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:background="@drawable/outline_style"
            android:hint="@string/tv_hint_dialogRegister_Password"
            android:inputType="textPassword"
            android:textSize="25sp"
            android:autofillHints="" />

        <Button
            android:id="@+id/button_rg_register"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:text="@string/btn_text_dialogRegister_Register"
            android:textSize="20sp" />
</LinearLayout>
