<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/activity_backgroundColor"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="-5dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:gravity="center"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/tv_text_Login"
            android:textSize="40sp" />

        <EditText
            android:id="@+id/editText_li_username"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:layout_gravity="center"
            android:background="@drawable/outline_style"
            android:hint="@string/edtT_hint_Login_Username"
            android:textSize="25sp"
            android:autofillHints=""
            android:inputType="text" />

        <EditText
            android:id="@+id/editText_li_password"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:padding="10dp"
            android:background="@drawable/outline_style"
            android:hint="@string/edtT_hint_Login_Password"
            android:inputType="textPassword"
            android:textSize="25sp"
            android:autofillHints="" />

        <LinearLayout
            android:layout_width="353dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_li_register"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:text="@string/btn_text_Login_Register"
                android:textSize="20sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button_li_login"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:text="@string/btn_text_Login_Login"
                android:textSize="20sp"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>