<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/activity_backgroundColor"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="1dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/tv_loginState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/outline_style"
            android:padding="15dp"
            android:text="@string/tv_text_Main_loginState"
            android:textSize="25sp" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageViewCircle"
            android:layout_width="350dp"
            android:layout_height="350dp"
            android:layout_below="@+id/tv_loginState"
            android:layout_centerHorizontal="true"
            android:background="@color/colorDefault"
            app:shapeAppearanceOverlay="@style/Circular" />

        <Button
            android:id="@+id/button_Add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageViewCircle"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"
            android:text="@string/btn_text_Main_Add" />

        <ImageView
            android:id="@+id/imageViewRe"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@+id/imageViewCircle"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@+id/button_Add"
            app:srcCompat="@android:drawable/ic_menu_delete"
            android:importantForAccessibility="no" />

        <ImageView
            android:id="@+id/imageViewZoomIn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@+id/imageViewCircle"
            android:layout_marginEnd="50dp"
            android:layout_alignParentEnd="true"
            app:srcCompat="@drawable/baseline_zoom_in_24"
            android:importantForAccessibility="no"/>

        <ImageView
            android:id="@+id/imageViewZoomOut"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@+id/imageViewZoomIn"
            android:layout_marginEnd="50dp"
            android:layout_alignParentEnd="true"
            app:srcCompat="@drawable/baseline_zoom_out_24"
            android:importantForAccessibility="no"/>

        <TextView
            android:id="@+id/tv_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_Add"
            android:layout_marginStart="5dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:padding="5dp"
            android:background="@drawable/outline_style"
            android:gravity="center"
            android:fontFamily="cursive"
            android:text="@string/tv_text_Main_Quantity"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_finish"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_quantity"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/btn_text_Main_Finish"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageViewMain"
            android:layout_below="@+id/imageViewCircle"
            android:layout_toEndOf="@+id/imageViewRe"
            android:layout_margin="20dp"
            android:layout_width="66dp"
            android:layout_height="20dp"
            tools:visibility="gone"
            android:importantForAccessibility="no" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>